# NEARCON2022

./: Cargo.toml
src/: lib.rs
wasm/: on_chain_chat.wasm
