

[package]
name = "on-chain-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
clap = { version = "3.0.0-beta.2", optional = true }
near-sdk = { version = "4.0.0-pre.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.81"
near-contract-standards = "4.0.0-pre.4"
hex = "0.4.2"
uint = { version = "0.8.3", default-features = false }
